Fix contact section height on smaller screens with media query

--- a/nebracy/static/css/style.css
+++ b/nebracy/static/css/style.css
@@ -618,11 +618,16 @@ h5 {
 }
 
 .contact {
-  height: 95vh;
-  max-height: 900px;
   align-items: center;
   padding-top: 20px;
   background-image: linear-gradient(0deg, var(--main-bg-color) 65%, var(--grey));
+}
+
+@media screen and (min-width: 1200px) {
+  .contact {
+      height: 95vh;
+      max-height: 900px;
+  }
 }
 
 .contact__text {
